--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-camera-hooks": "^0.5.1",
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-permissions": "^3.0.5",
     "react-native-qrcode-scanner": "^1.5.4",
     "react-native-reanimated": "^2.2.0",
