--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,7 +3,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 permissions_path = '../node_modules/react-native-permissions/ios'
 pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
-
+pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
 
 platform :ios, '10.0'
 
